<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/unify_background"
    android:orientation="vertical">

    <include layout="@layout/titlelayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="@string/password_text" />

            <FrameLayout android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/register_passwrod_edittext"
                    style="@style/personInfoEditText_V2"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"></zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="@string/sure_password" />

            <FrameLayout android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText

                    android:id="@+id/register_passwrod_again_edittext"
                    style="@style/personInfoEditText_V2"
                    android:background="@null"
                    android:hint="@string/password_again"
                    android:inputType="textPassword" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"></zhidanhyb.huozhu.View.DividerView>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="@string/name" />

            <FrameLayout android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/register_name_edittext"
                    style="@style/personInfoEditText_V2"
                    android:hint="@string/editname" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"></zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="84dp"
                android:layout_height="50dp">

                <TextView
                    style="@style/personInfoText_V2"
                    android:text="@string/sex" />
            </RelativeLayout>

            <FrameLayout android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/register_named_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/register_named_sir_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/sir"
                        style="@style/v2_checkbox"
                        android:textColor="@color/check_box_textcolor_selector"
                        android:textSize="13sp" />

                    <CheckBox            style="@style/v2_checkbox"
                        android:id="@+id/register_named_madam_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/madam"
                        android:textColor="@color/check_box_textcolor_selector"
                        android:textSize="13sp" />
                </RadioGroup>

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"></zhidanhyb.huozhu.View.DividerView>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="@string/company" />

            <FrameLayout android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText

                    android:id="@+id/register_company_edittext"
                    style="@style/personInfoEditText_V2"
                    android:hint="@string/country" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"></zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/statement"
            android:textColor="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/v2_btn_submit_with_divider_bg"
        android:text=" 完成编辑 "
        android:textColor="@color/dialog_text_title_v2"
        android:textSize="18sp" />

</LinearLayout>