<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/unify_background"
    android:orientation="vertical">

    <include layout="@layout/titlelayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="@string/password_text" />

            <EditText
                android:id="@+id/forget_passwrod_edittext"
                style="@style/personInfoEditText_V2"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="@string/sure_password" />

            <EditText
                android:id="@+id/forget_passwrod_again_edittext"
                style="@style/personInfoEditText_V2"
                android:hint="@string/password_again"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/forget_accomplish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="完成"
        android:textColor="@color/dialog_text_title_v2"
        android:background="@drawable/v2_btn_submit_with_divider_bg"
        android:textSize="18sp" />
</LinearLayout>