<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bankcardpassword_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_v2"
    android:orientation="vertical">

    <include layout="@layout/titlelayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:padding="10dp"
                android:text="@string/password_text"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/backcard_password_edittext"
                    style="@style/personInfoEditText_V2"
                    android:hint="@string/sixpassword"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:textSize="15sp" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"></zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sure_password"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/backcard_passwords_edittext"
                    style="@style/personInfoEditText_V2"
                    android:hint="@string/sixpasswords"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:textSize="15sp" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"></zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/other_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/backcard_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/v2_btn_submit_with_divider_bg"
        android:text="@string/submitpassword"
        android:textColor="@color/dialog_text_desc_v2"
        android:textSize="17sp" />

    <include layout="@layout/keyboard_layout" />

</LinearLayout>