<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <include layout="@layout/dialog_title_layout" />

        <zhidanhyb.huozhu.View.WheelView
            android:id="@+id/choosegoods_type_wheelview"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendorder_goods_ton"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/goods_type_ton_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray"
                android:hint="@string/sendorder_goods_ton_number"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendorder_goods_tons"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <include layout="@layout/dialog_buttons_layout" />
    </LinearLayout>

</LinearLayout>