<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_v2"
    android:orientation="vertical">

    <include layout="@layout/titlelayout" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="公司名称" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/register_company_edittext"
                    style="@style/personInfoEditText_V2"
                    android:hint="请输入您的公司名称(选填)" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                </zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/personInfoText_V2"
                android:text="@string/name" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/register_name_edittext"
                    style="@style/personInfoEditText_V2"
                    android:hint="@string/editname" />

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                </zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="84dp"
                android:layout_height="50dp">

                <TextView
                    style="@style/personInfoText_V2"
                    android:text="@string/sex" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/v2_me_sex"
                    style="@style/personInfoEditText_V2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/register_named_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/register_named_sir_radiobutton"
                        style="@style/v2_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/sir"

                        android:textColor="@color/check_box_textcolor_selector"
                        android:textSize="13sp" />

                    <CheckBox
                        android:id="@+id/register_named_madam_radiobutton"
                        style="@style/v2_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/madam"
                        android:textColor="@color/check_box_textcolor_selector"
                        android:textSize="13sp" />
                </RadioGroup>

                <zhidanhyb.huozhu.View.DividerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">

                </zhidanhyb.huozhu.View.DividerView>
            </FrameLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="5dp"
            android:text="@string/statement"
       />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/v2_btn_submit_with_divider_bg"
        android:text="确定"
        android:textColor="@color/dialog_text_title_v2"
        android:textSize="18sp" />

</LinearLayout>